fixed layout issue for mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,7 +13,9 @@
 }
 body {
   margin: 0;
-  /* background-color: var(--biege-color); */
+}
+button {
+  color: inherit;
 }
 .primary-button {
   position: relative;
